1) Added subtotal to each items in Cart 2) Added divider between the list items

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
     "checkout": "Checkout",
     "qty": "Qty",
     "subtotal": "Subtotal",
+    "total": "Total",
     "items": "Items",
     "addToCart": "Add to cart"
   },
